--- a/starter/src/main/resources/application.properties
+++ b/starter/src/main/resources/application.properties
@@ -2,9 +2,9 @@ server.port=8080
 
 #datasource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.druid.url=jdbc:mysql://rm-8vbs6givq78c5rf52.mysql.zhangbei.rds.aliyuncs.com/activiti_db?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowMultiQueries=true
+spring.datasource.druid.url=jdbc:mysql://localhost:3306/activiti_db?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowMultiQueries=true
 spring.datasource.druid.username=root
-spring.datasource.druid.password=Shangyue@123
+spring.datasource.druid.password=root
 
 #jackson
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
