--- a/starter/src/main/resources/application.properties
+++ b/starter/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8080
 
 #datasource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.druid.url=jdbc:mysql://localhost:3306/activiti_db?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowMultiQueries=true
+spring.datasource.druid.url=jdbc:mysql://localhost:3306/activiti?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowMultiQueries=true
 spring.datasource.druid.username=root
 spring.datasource.druid.password=root
 
